commit translated contents

--- a/docs/code-quality/c6067.md
+++ b/docs/code-quality/c6067.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - C6067
 ms.assetid: 6fbaee53-daaa-4ba5-9b11-2a8066d86240
-ms.openlocfilehash: 084325298988e78d0efc1a05d7e561acfe386872
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 81a8ec2a401093583cae3474ae5909b3c9f779ab
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420797"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91499980"
 ---
 # <a name="c6067"></a>C6067
 
-> avviso C6067: il parametro \<numero > nella chiamata a \<funzione > deve essere l'indirizzo della stringa
+> avviso C6067: \<number> il parametro nella chiamata a \<function> deve essere l'indirizzo della stringa
 
-Questo avviso indica una mancata corrispondenza tra l'identificatore di formato e il parametro della funzione. Anche se l'avviso suggerisce di usare l'indirizzo della stringa, è necessario controllare il tipo di parametro previsto da una funzione prima di correggere il problema. Ad esempio, una specifica di `%s` per `printf` richiede un argomento di stringa, ma una specifica `%s` in `scanf` richiede un indirizzo della stringa.
+Questo avviso indica una mancata corrispondenza tra l'identificatore di formato e il parametro della funzione. Anche se l'avviso suggerisce di usare l'indirizzo della stringa, è necessario controllare il tipo di parametro previsto da una funzione prima di correggere il problema. Ad esempio, una `%s` specifica per `printf` richiede un argomento di stringa, ma una `%s` specifica in `scanf` richiede un indirizzo della stringa.
 
 È probabile che questo difetto provochi un arresto anomalo o un danneggiamento di qualche forma.
 
@@ -50,7 +50,7 @@ void f_corrected()
 }
 ```
 
-Il codice seguente genera questo avviso perché viene specificato un livello di riferimento indiretto non corretto quando si passa il parametro, buffer, a `scanf`:
+Il codice seguente genera questo avviso perché viene specificato un livello di riferimento indiretto errato quando si passa il parametro, buffer, a `scanf` :
 
 ```cpp
 #include <stdio.h>
@@ -104,6 +104,6 @@ void f_safe()
 
 ## <a name="see-also"></a>Vedere anche
 
-- [sprintf\_s, \_sprintf\_s\_l, swprintf\_s, \_swprintf\_s\_l](/cpp/c-runtime-library/reference/sprintf-s-sprintf-s-l-swprintf-s-swprintf-s-l)
-- [printf, \_printf\_l, wprintf, \_wprintf\_l](/cpp/c-runtime-library/reference/printf-printf-l-wprintf-wprintf-l)
-- [scanf\_s, \_scanf\_s\_l, wscanf\_s, \_wscanf\_s\_l](/cpp/c-runtime-library/reference/scanf-s-scanf-s-l-wscanf-s-wscanf-s-l)
+- [sprintf \_ s, \_ sprintf \_ s \_ l, swprintf \_ s, \_ swprintf \_ s \_ l](../c-runtime-library/reference/sprintf-s-sprintf-s-l-swprintf-s-swprintf-s-l.md)
+- [printf, \_ printf \_ l, wprintf, \_ wprintf \_ l](../c-runtime-library/reference/printf-printf-l-wprintf-wprintf-l.md)
+- [scanf \_ s, \_ scanf \_ s \_ l, wscanf \_ s, \_ wscanf \_ s \_ l](../c-runtime-library/reference/scanf-s-scanf-s-l-wscanf-s-wscanf-s-l.md)
