--- a/docs/code-quality/c6211.md
+++ b/docs/code-quality/c6211.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - C6211
 ms.assetid: 9b68243b-534c-4a05-b789-bb155dfcba1e
-ms.openlocfilehash: 8f9cb312c016622ecf3eac4e63140418543531c1
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: c2916c6b6659196abd685516dc8446ad64d81d4c
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420671"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91499154"
 ---
 # <a name="c6211"></a>C6211
 
-> avviso C6211: la perdita di memoria \<puntatore > a causa di un'eccezione. Provare a usare un blocco catch locale per pulire la memoria
+> avviso C6211: perdita di memoria \<pointer> a causa di un'eccezione. Provare a usare un blocco catch locale per pulire la memoria
 
-Questo avviso indica che la memoria allocata non viene liberata quando viene generata un'eccezione. L'istruzione alla fine del percorso potrebbe potenzialmente generare un'eccezione. L'analizzatore verifica questa condizione solo quando viene specificata l'annotazione `_Analysis_mode_(_Analysis_local_leak_checks_)` SAL. Per impostazione predefinita, questa annotazione viene specificata per il codice della modalità kernel di Windows (driver). Per ulteriori informazioni sulle annotazioni SAL, vedere [utilizzo delle annotazioni SAL perC++ ridurre i difetti del codice C/](../code-quality/using-sal-annotations-to-reduce-c-cpp-code-defects.md).
+Questo avviso indica che la memoria allocata non viene liberata quando viene generata un'eccezione. L'istruzione alla fine del percorso potrebbe potenzialmente generare un'eccezione. L'analizzatore verifica questa condizione solo quando `_Analysis_mode_(_Analysis_local_leak_checks_)` viene specificata l'annotazione SAL. Per impostazione predefinita, questa annotazione viene specificata per il codice della modalità kernel di Windows (driver). Per ulteriori informazioni sulle annotazioni SAL, vedere [utilizzo delle annotazioni SAL per ridurre i difetti del codice C/C++](../code-quality/using-sal-annotations-to-reduce-c-cpp-code-defects.md).
 
 ## <a name="example"></a>Esempio
 
@@ -77,7 +77,7 @@ void f()
 }
 ```
 
-Per evitare interamente queste potenziali inconsistenze, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [ C++ libreria standard](/cpp/standard-library/cpp-standard-library-reference).
+Per evitare interamente queste potenziali inconsistenze, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](../standard-library/shared-ptr-class.md), [unique_ptr](../standard-library/unique-ptr-class.md)e [vector](../standard-library/vector.md). Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
 
 ```cpp
 // cl.exe /analyze /c /EHsc /nologo /W4
@@ -114,4 +114,4 @@ void f( )
 
 ## <a name="see-also"></a>Vedere anche
 
-[Gestione delle eccezioni C++](/cpp/cpp/cpp-exception-handling)
+[Gestione delle eccezioni C++](../cpp/exception-handling-in-visual-cpp.md)
