--- a/docs/code-quality/c6226.md
+++ b/docs/code-quality/c6226.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - C6226
 ms.assetid: c18aa576-b316-4f11-b48f-f5183fa49c7c
-ms.openlocfilehash: e3f550510377115da0566715fde684287baa7b22
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 6ee1b695b91d2cb67c0c4b702a5a4a462798e2f0
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420573"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91499131"
 ---
 # <a name="c6226"></a>C6226
 
 > avviso C6226: cast implicito tra tipi integer semanticamente diversi: assegnazione di-1 a HRESULT. In alternativa, provare a usare E_FAIL.
 
-Questo avviso indica che un `HRESULT` viene assegnato o inizializzato su un valore esplicito di-1. Questo avviso è spesso causato da una confusione accidentale di tipi integer e `HRESULT`. Per indicare l'esito positivo, usare invece la costante simbolica `S_OK`. Per indicare un errore, utilizzare le costanti simboliche che iniziano con E_*costante*, ad esempio `E_FAIL`.
+Questo avviso indica che un oggetto `HRESULT` è assegnato o inizializzato su un valore esplicito di-1. Questo avviso è spesso causato da una confusione accidentale di Integer e `HRESULT` tipi. Per indicare l'esito positivo, usare invece la costante simbolica `S_OK` . Per indicare un errore, utilizzare le costanti simboliche che iniziano con E_*costante*, ad esempio `E_FAIL` .
 
 Per ulteriori informazioni, vedere le macro [succeeded](/windows/desktop/api/winerror/nf-winerror-succeeded) e [failed](/windows/desktop/api/winerror/nf-winerror-failed) .
 
@@ -68,6 +68,6 @@ VOID f( )
 }
 ```
 
-Per questo avviso, il tipo di `SCODE` viene considerato come `HRESULT`.
+Per questo avviso, il `SCODE` tipo viene considerato come `HRESULT` .
 
-L'uso di `malloc` e `free` (e delle API di memoria dinamica correlate) presenta molti problemi come causa di perdite di memoria ed eccezioni. Per evitare questi tipi di perdite e problemi di eccezione, usare le classi di puntatore e contenitore fornite dalla C++ libreria standard. Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [ C++ libreria standard](/cpp/standard-library/cpp-standard-library-reference).
+L'uso di `malloc` e `free` (e delle API di memoria dinamica correlate) presenta molti problemi come causa di perdite di memoria ed eccezioni. Per evitare questi tipi di perdite e problemi di eccezione, usare le classi di puntatore e contenitore fornite dalla libreria standard C++. Sono inclusi [shared_ptr](../standard-library/shared-ptr-class.md), [unique_ptr](../standard-library/unique-ptr-class.md)e [vector](../standard-library/vector.md). Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
