--- a/docs/code-quality/c6230.md
+++ b/docs/code-quality/c6230.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - C6230
 ms.assetid: aa91291d-cdc5-4720-89d4-194ce0557e99
-ms.openlocfilehash: d3e5c927aff58864c5da26ef731686c5c24de244
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+ms.openlocfilehash: 8ce68e35521eaa7fb6da5e26422e8001626c3fed
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87221861"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91499118"
 ---
 # <a name="c6230"></a>C6230
 
@@ -66,4 +66,4 @@ VOID f( )
 
 Per questo avviso, il `SCODE` tipo viene considerato come `HRESULT` .
 
-L'uso di `malloc` e `free` (e delle API di memoria dinamica correlate) presenta molti problemi come causa di perdite di memoria ed eccezioni. Per evitare questi tipi di perdite e problemi di eccezione, usare le classi di puntatore e contenitore fornite dalla libreria standard C++. Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [libreria standard C++](/cpp/standard-library/cpp-standard-library-reference).
+L'uso di `malloc` e `free` (e delle API di memoria dinamica correlate) presenta molti problemi come causa di perdite di memoria ed eccezioni. Per evitare questi tipi di perdite e problemi di eccezione, usare le classi di puntatore e contenitore fornite dalla libreria standard C++. Sono inclusi [shared_ptr](../standard-library/shared-ptr-class.md), [unique_ptr](../standard-library/unique-ptr-class.md)e [vector](../standard-library/vector.md). Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
