--- a/docs/code-quality/c6237.md
+++ b/docs/code-quality/c6237.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - C6237
 ms.assetid: a18d8630-e4d6-4132-b976-c1f3e7c5c3f0
-ms.openlocfilehash: bbda725352ffa7412b120359ffcb0de88f2f5b02
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 18ebdac4a7d5a65cbf8fd002aa102fc27d6fc039
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420531"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91499070"
 ---
 # <a name="c6237"></a>C6237
 
-> avviso C6237: (\<zero > & & \<espressione >) è sempre zero. \<espressione > non viene mai valutata e può avere effetti collaterali
+> avviso C6237: ( \<zero>  &&  \<expression> ) è sempre zero. \<expression> non viene mai valutato e potrebbe avere effetti collaterali
 
 Questo avviso indica che è stato rilevato un valore costante pari a zero sul lato sinistro di un'operazione and logico che si verifica in un contesto di test. L'espressione risultante restituisce sempre false. Pertanto, il lato destro dell'operazione AND logica non viene valutato. Questa operazione viene definita "valutazione a corto circuito".
 
 È necessario esaminare attentamente il lato destro dell'espressione per assicurarsi che gli effetti collaterali, ad esempio le operazioni di assegnazione, chiamata di funzione, incremento e decremento necessari per le funzionalità appropriate, non siano interessati dalla valutazione del cortocircuito.
 
-L'espressione (`0 && n`) non produce effetti collaterali e viene comunemente usata per scegliere in modo selettivo i percorsi di codice.
+L'espressione ( `0 && n` ) non produce effetti collaterali e viene comunemente usata per scegliere in modo selettivo i percorsi di codice.
 
 ## <a name="example"></a>Esempio
 
@@ -130,4 +130,4 @@ void f3( int n )
 
 ## <a name="see-also"></a>Vedere anche
 
-[Operatori logici C](/cpp/c-language/c-logical-operators)
+[Operatori logici C](../c-language/c-logical-operators.md)
