--- a/docs/code-quality/c6250.md
+++ b/docs/code-quality/c6250.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - C6250
 ms.assetid: 6949c9c5-e8bd-4f95-bc80-42073a293357
-ms.openlocfilehash: 22c65969aaa33603103a072f9d8a8a5712f35a0e
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 295a7d8803a95c06842bae2226b46f222e37b009
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420433"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91499005"
 ---
 # <a name="c6250"></a>C6250
 
-> avviso C6250: la chiamata alla funzione \<> VirtualFree senza il flag MEM_RELEASE può liberare memoria ma non descrittori di indirizzo (VADs); Risultati in perdite di spazio degli indirizzi
+> avviso C6250: \<function> la chiamata a VirtualFree senza il flag di MEM_RELEASE può liberare memoria ma non descrittori di indirizzo (VADS); genera perdite di spazio degli indirizzi
 
-Questo avviso indica che una chiamata a `VirtualFree` senza il flag di `MEM_RELEASE` Annulla solo il commit delle pagine e non le rilascia. Per eseguire il decommit e rilasciare le pagine, usare `MEM_RELEASE` flag nella chiamata al `VirtualFree`. Se viene eseguito il commit di tutte le pagine dell'area, la funzione esegue prima di tutto il commit e quindi le rilascia. Dopo questa operazione, le pagine sono in stato libero. Se si specifica questo flag, `dwSize` deve essere zero e `lpAddress` deve puntare all'indirizzo di base restituito dalla funzione `VirtualAlloc` quando l'area è stata riservata. La funzione ha esito negativo se una di queste condizioni non viene soddisfatta.
+Questo avviso indica che una chiamata a `VirtualFree` senza il `MEM_RELEASE` flag Annulla solo il commit delle pagine e non le rilascia. Per eseguire il decommit e rilasciare le pagine, usare `MEM_RELEASE` flag nella chiamata a `VirtualFree` . Se viene eseguito il commit di tutte le pagine dell'area, la funzione esegue prima di tutto il commit e quindi le rilascia. Dopo questa operazione, le pagine sono in stato libero. Se si specifica questo flag, `dwSize` deve essere zero e `lpAddress` deve puntare all'indirizzo di base restituito dalla `VirtualAlloc` funzione quando l'area è stata riservata. La funzione ha esito negativo se una di queste condizioni non viene soddisfatta.
 
-È possibile ignorare questo avviso se il codice libera in un secondo momento lo spazio degli indirizzi chiamando `VirtualFree` con il flag di `MEM_RELEASE`.
+È possibile ignorare questo avviso se il codice libera in un secondo momento lo spazio degli indirizzi chiamando `VirtualFree` con il `MEM_RELEASE` flag.
 
 Per ulteriori informazioni, vedere [VirtualAlloc](/windows/win32/api/memoryapi/nf-memoryapi-virtualalloc) e [VirtualFree](/windows/win32/api/memoryapi/nf-memoryapi-virtualfree).
 
-L'uso di VirtualAlloc e VirtualFree presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL ( C++ Standard Template Library). Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [ C++ libreria standard](/cpp/standard-library/cpp-standard-library-reference).
+L'uso di VirtualAlloc e VirtualFree presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](../standard-library/shared-ptr-class.md), [unique_ptr](../standard-library/unique-ptr-class.md)e [vector](../standard-library/vector.md). Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
 
 ## <a name="example"></a>Esempio
 
