--- a/docs/code-quality/c6255.md
+++ b/docs/code-quality/c6255.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - C6255
 ms.assetid: bb6430b2-782a-4410-a8e1-609df06007de
-ms.openlocfilehash: f38d45d8e252261acfc09de389a44f4ba85650e9
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 646147960e5502390f513fa027b825ca7193d335
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420440"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91498967"
 ---
 # <a name="c6255"></a>C6255
 
 > avviso C6255: _alloca indica l'errore generando un'eccezione di overflow dello stack. Provare a usare invece _malloca
 
-Questo avviso indica che è stata rilevata una chiamata a `_alloca` al di fuori della gestione delle eccezioni locale. `_alloca` deve essere sempre chiamato dall'interno dell'intervallo protetto di un gestore di eccezioni perché può generare un'eccezione di overflow dello stack in caso di errore. Se possibile, invece di usare `_alloca`, è consigliabile usare `_malloca`, che è una versione più sicura di `_alloca`.
+Questo avviso indica che `_alloca` è stata rilevata una chiamata a al di fuori della gestione delle eccezioni locale. `_alloca` deve sempre essere chiamato dall'interno dell'intervallo protetto di un gestore di eccezioni perché può generare un'eccezione di overflow dello stack in caso di errore. Se possibile, anziché utilizzare `_alloca` , è consigliabile utilizzare, `_malloca` che è una versione più sicura di `_alloca` .
 
 ## <a name="example"></a>Esempio
 
-Il codice seguente genera questo avviso perché `_alloca` possibile generare un'eccezione:
+Il codice seguente genera questo avviso perché `_alloca` può generare un'eccezione:
 
 ```cpp
 #include <windows.h>
@@ -61,4 +61,4 @@ void f( )
 
 ## <a name="see-also"></a>Vedere anche
 
-[_malloca](/cpp/c-runtime-library/reference/malloca)
+[_malloca](../c-runtime-library/reference/malloca.md)
