--- a/docs/code-quality/c6284.md
+++ b/docs/code-quality/c6284.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - C6284
 ms.assetid: f3633df6-2978-4899-8c0b-b495bd869e1a
-ms.openlocfilehash: d9a15c52c1480b0c00a5a7b7312eed9f6487482c
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: eed3272213bb677e71f540a19808dd1129784e02
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420111"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91499878"
 ---
 # <a name="c6284"></a>C6284
 
-> avviso C6284: oggetto passato come parametro quando è richiesta una stringa nella chiamata a \<funzione\>
+> avviso C6284: oggetto passato come parametro quando è richiesta una stringa nella chiamata a \<function\>
 
-Questo avviso indica che non è presente una corrispondenza tra l'identificatore di formato e il tipo usato in una funzione di tipo `printf`.  L'identificatore di formato è un tipo di stringa di tipo C, ad esempio `%s` o `%ws`, e l'argomento corrispondente è un tipo di oggetto.
+Questo avviso indica la mancata corrispondenza tra l'identificatore di formato e il tipo utilizzato in una funzione di tipo `printf` .  L'identificatore di formato è un tipo di stringa di tipo C, ad esempio `%s` o `%ws` , e l'argomento corrispondente è un tipo di oggetto.
 
 Questo difetto potrebbe produrre un arresto anomalo o un output errato.
 
-Questo problema spesso è dovuto al mancato rispetto della conversione di un tipo stringa di oggetto, ad esempio `std::string`, `CComBSTR` o `bstr_t` nella stringa di tipo C prevista dalla funzione di tipo `printf`.  In tal caso, la correzione consiste nell'aggiungere la conversione appropriata al tipo.  Questa operazione è necessaria perché i parametri per le funzioni di tipo `printf`sono essenzialmente non tipizzati, quindi non viene eseguita alcuna conversione automatica.
+Questo problema spesso è dovuto al mancato rispetto della conversione di un tipo stringa di oggetto, ad esempio `std::string` , `CComBSTR` o `bstr_t` nella stringa di stile C prevista dalla funzione di tipo C `printf` .  In tal caso, la correzione consiste nell'aggiungere la conversione appropriata al tipo.  Questa operazione è necessaria perché i parametri per le `printf` funzioni di tipo sono essenzialmente non tipizzati, quindi non viene eseguita alcuna conversione automatica.
 
 ## <a name="example"></a>Esempio
 
@@ -62,5 +62,5 @@ void f()
 
 ## <a name="see-also"></a>Vedere anche
 
-- [Operatore static_cast](/cpp/cpp/static-cast-operator)
-- [sprintf_s, _sprintf_s_l, swprintf_s, _swprintf_s_l](/cpp/c-runtime-library/reference/sprintf-s-sprintf-s-l-swprintf-s-swprintf-s-l)
+- [Operatore static_cast](../cpp/static-cast-operator.md)
+- [sprintf_s, _sprintf_s_l, swprintf_s, _swprintf_s_l](../c-runtime-library/reference/sprintf-s-sprintf-s-l-swprintf-s-swprintf-s-l.md)
