--- a/docs/code-quality/c6285.md
+++ b/docs/code-quality/c6285.md
@@ -7,16 +7,16 @@ f1_keywords:
 helpviewer_keywords:
 - C6285
 ms.assetid: f5bc6d3d-d33b-42c8-98d2-92ec8ab17193
-ms.openlocfilehash: afb9c358f32465b02fdd4992a1c44859a5c2b835
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 8c63c1903a6acdfbd78e707a47d331ca6e28bb33
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420097"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91499859"
 ---
 # <a name="c6285"></a>C6285
 
-> avviso C6285: (\<costante diversa da zero > &#124; &#124; \<> costante diverso da zero) è sempre una costante diversa da zero. Si intendeva utilizzare l'operatore and bit per bit?
+> avviso C6285: ( \<non-zero constant> &#124;&#124; \<non-zero constant> ) è sempre una costante diversa da zero. Si intendeva utilizzare l'operatore and bit per bit?
 
 Questo avviso indica che due valori costanti, entrambi maggiori di uno, sono stati rilevati come argomenti di un'operazione logica o che si verifica in un contesto di test. Questa espressione è sempre TRUE.
 
@@ -70,4 +70,4 @@ void f(int flag)
 
 ## <a name="see-also"></a>Vedere anche
 
-[Espressioni con operatori binari](/cpp/cpp/expressions-with-binary-operators)
+[Espressioni con operatori binari](../cpp/expressions-with-binary-operators.md)
