--- a/docs/code-quality/c6286.md
+++ b/docs/code-quality/c6286.md
@@ -7,16 +7,16 @@ f1_keywords:
 helpviewer_keywords:
 - C6286
 ms.assetid: c79c5d4a-c02b-4b98-891a-d79e471f9da7
-ms.openlocfilehash: 6bda1d10e6a52a84c3c09b2290c2926d429a8d56
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+ms.openlocfilehash: 230f8e2b055970077544174ddc1bfa2f4047673b
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87233808"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91499849"
 ---
 # <a name="c6286"></a>C6286
 
-> avviso C6286: ( \<non-zero constant> &#124;&#124; \<expression> ) è sempre una costante diversa da zero. \<expression>non viene mai valutato e potrebbe avere effetti collaterali
+> avviso C6286: ( \<non-zero constant> &#124;&#124; \<expression> ) è sempre una costante diversa da zero. \<expression> non viene mai valutato e potrebbe avere effetti collaterali
 
 Questo avviso indica che è stata rilevata una costante diversa da zero sul lato sinistro di un'operazione OR logica che si verifica in un contesto di test. L'espressione risultante restituisce sempre TRUE. Inoltre, il lato destro dell'espressione presenta effetti collaterali e andranno persi.
 
@@ -77,4 +77,4 @@ void f()
 
 ## <a name="see-also"></a>Vedere anche
 
-[Operatore OR logico: &#124;&#124;](/cpp/cpp/logical-or-operator-pipe-pipe)
+[Operatore OR logico: &#124;&#124;](../cpp/logical-or-operator-pipe-pipe.md)
