--- a/docs/code-quality/c6214.md
+++ b/docs/code-quality/c6214.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - C6214
 ms.assetid: 233e2395-61c1-4a3b-a54b-f19a9ffc31a8
-ms.openlocfilehash: 8ce8e1ee9653e273814428d509aeda30084182e4
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 656586cd419d082e5f295c0f33570dce57679ccc
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420678"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91499166"
 ---
 # <a name="c6214"></a>C6214
 
 > avviso C6214: cast tra tipi integer semanticamente diversi: HRESULT a un tipo Boolean
 
-Questo avviso indica che è in corso il cast di un `HRESULT` a un tipo Boolean. Il valore di operazione riuscita (`S_OK`) di un `HRESULT` è uguale a 0. Tuttavia, 0 indica un errore per un tipo booleano. Il cast di un `HRESULT` a un tipo booleano e quindi l'uso in un'espressione di test produrrà un risultato errato. In alcuni casi, questo avviso viene visualizzato se un `HRESULT` viene archiviato in una variabile booleana. Tutti i confronti che usano la variabile booleana per verificare `HRESULT` esito positivo o negativo potrebbero causare risultati non corretti.
+Questo avviso indica che `HRESULT` viene eseguito il cast di un oggetto a un tipo Boolean. Il valore di Success ( `S_OK` ) di un oggetto `HRESULT` è uguale a 0. Tuttavia, 0 indica un errore per un tipo booleano. Il cast `HRESULT` di un oggetto a un tipo booleano e quindi l'uso in un'espressione di test produrrà un risultato errato. In alcuni casi, questo avviso viene visualizzato se un oggetto `HRESULT` viene archiviato in una variabile booleana. Tutti i confronti che usano la variabile booleana per verificare l' `HRESULT` esito positivo o negativo potrebbero causare risultati non corretti.
 
 ## <a name="example"></a>Esempio
 
@@ -69,14 +69,14 @@ BOOL f( )
 }
 ```
 
-Per questo avviso, il tipo di `SCODE` è equivalente a `HRESULT`.
+Per questo avviso, il `SCODE` tipo è equivalente a `HRESULT` .
 
-In genere, è consigliabile usare la macro `SUCCEEDED` o `FAILED` per verificare il valore di un `HRESULT`.
+In genere, `SUCCEEDED` la `FAILED` macro o deve essere usata per verificare il valore di un oggetto `HRESULT` .
 
-Per altre informazioni, vedere uno degli argomenti seguenti:
+Per ulteriori informazioni, vedere uno degli argomenti seguenti:
 
 [COMPLETATA](/windows/desktop/api/winerror/nf-winerror-succeeded)
 
 [FALLITO](/windows/desktop/api/winerror/nf-winerror-failed)
 
-Per sfruttare la metodologia di allocazione della memoria moderna C++ , utilizzare i meccanismi forniti C++ dalla libreria STL (Standard Template Library). Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [ C++ libreria standard](/cpp/standard-library/cpp-standard-library-reference).
+Per sfruttare la metodologia di allocazione di memoria C++ moderna, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](../standard-library/shared-ptr-class.md), [unique_ptr](../standard-library/unique-ptr-class.md)e [vector](../standard-library/vector.md). Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
