--- a/docs/code-quality/c6220.md
+++ b/docs/code-quality/c6220.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - C6220
 ms.assetid: a13524f4-0a1f-4670-b830-70b06e4d39d2
-ms.openlocfilehash: 268f570cf278019204f6d0b401d69149aa2af16d
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 3ad2b666e0115188f3e88b09b4a98b3e193d354e
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420622"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91499966"
 ---
 # <a name="c6220"></a>C6220
 
 > avviso C6220-cast implicito tra tipi integer semanticamente diversi: confronto di HRESULT con-1. Prendere in considerazione l'uso della macro SUCCEEDed o FAILED
 
-Questo avviso indica che un `HRESULT` viene confrontato con un valore esplicito non`HRESULT` di-1, che non è un `HRESULT`ben formato. Un errore in `HRESULT` (`E_FAIL`) non è rappresentato da-1. Pertanto, un cast implicito di un `HRESULT` a un intero genererà un valore non corretto e probabilmente genererà un risultato errato.
+Questo avviso indica che un oggetto `HRESULT` viene confrontato con un `HRESULT` valore di-1 esplicito, che non è un formato corretto `HRESULT` . Un errore in `HRESULT` ( `E_FAIL` ) non è rappresentato da-1. Pertanto, un cast implicito di un oggetto `HRESULT` a un intero genererà un valore non corretto e probabilmente causerà il risultato errato.
 
 ## <a name="example"></a>Esempio
 
-Nella maggior parte dei casi, questo avviso è causato dal fatto che il codice si aspetta erroneamente che una funzione che deve restituire un `HRESULT` restituisce invece un Integer, usando-1 come valore di errore. L'esempio di codice seguente genera questo avviso:
+Nella maggior parte dei casi, questo avviso è causato dal fatto che il codice si aspetta erroneamente che una funzione che deve restituire un oggetto `HRESULT` restituisca invece un Integer, usando-1 come valore di errore. L'esempio di codice seguente genera questo avviso:
 
 ```cpp
 #include <windows.h>
@@ -46,7 +46,7 @@ HRESULT f( )
 }
 ```
 
-È consigliabile usare la macro `SUCCEEDED` o `FAILED` per verificare il valore di un `HRESULT`. Per correggere il problema, usare il codice seguente:
+È preferibile usare la `SUCCEEDED` `FAILED` macro o per verificare il valore di un oggetto `HRESULT` . Per correggere il problema, usare il codice seguente:
 
 ```cpp
 #include <windows.h>
@@ -70,10 +70,10 @@ HRESULT f( )
 }
 ```
 
-Per questo avviso, il tipo di `SCODE` è equivalente a `HRESULT`.
+Per questo avviso, il `SCODE` tipo è equivalente a `HRESULT` .
 
-Il confronto esplicito è appropriato per verificare la presenza di valori `HRESULT` specifici, ad esempio `E_FAIL`. In caso contrario, usare le macro `SUCCEEDED` o `FAILED`.
+Il confronto esplicito è appropriato per verificare la presenza di `HRESULT` valori specifici, ad esempio, `E_FAIL` . In caso contrario, usare le `SUCCEEDED` `FAILED` macro o.
 
 Per ulteriori informazioni, vedere [macro SUCCEEDED](/windows/win32/api/winerror/nf-winerror-succeeded) e [macro failed](/windows/win32/api/winerror/nf-winerror-failed).
 
-Si noti che l'uso di malloc e della versione gratuita (e delle API di allocazione della memoria dinamica correlate) presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL ( C++ Standard Template Library). Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [ C++ libreria standard](/cpp/standard-library/cpp-standard-library-reference).
+Si noti che l'uso di malloc e della versione gratuita (e delle API di allocazione della memoria dinamica correlate) presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](../standard-library/shared-ptr-class.md), [unique_ptr](../standard-library/unique-ptr-class.md)e [vector](../standard-library/vector.md). Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
