--- a/docs/code-quality/c6221.md
+++ b/docs/code-quality/c6221.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - C6221
 ms.assetid: b07989b7-f50f-46e0-8ed8-d9269b3d3580
-ms.openlocfilehash: 2a916d9801557681cdd51ef071e68807e36a8387
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 6860fab35a94ff051a41e098de4433080d6fd6d9
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420608"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91499946"
 ---
 # <a name="c6221"></a>C6221
 
 > avviso C6221: cast implicito tra tipi integer semanticamente diversi: confronto di HRESULT con un Integer. Si consiglia di utilizzare macro SUCCEEDed o FAILED
 
-Questo avviso indica che un `HRESULT` viene confrontato con un valore integer diverso da zero. Una riuscita in `HRESULT` (`S_OK`) è rappresentata da un valore 0. Pertanto, un cast implicito di un `HRESULT` a un intero genererà un valore non corretto e probabilmente genererà un risultato errato. Spesso viene causata erroneamente che una funzione restituisca un valore integer quando restituisce effettivamente un `HRESULT`.
+Questo avviso indica che un oggetto `HRESULT` viene confrontato con un valore integer diverso da zero. Una riuscita in `HRESULT` ( `S_OK` ) è rappresentata da un valore 0. Pertanto, un cast implicito di un oggetto `HRESULT` a un intero genererà un valore non corretto e probabilmente causerà il risultato errato. Spesso viene causata erroneamente che una funzione restituisca un valore integer quando restituisce effettivamente un oggetto `HRESULT` .
 
 ## <a name="example"></a>Esempio
 
-Il codice seguente genera questo avviso confrontando `HRESULT` rispetto a un valore integer:
+Il codice seguente genera questo avviso confrontando `HRESULT` con un valore integer:
 
 ```cpp
 #include <windows.h>
@@ -46,7 +46,7 @@ HRESULT f( )
 }
 ```
 
-Per correggere il problema, il codice seguente usa la macro `FAILED`:
+Per correggere il problema, il codice seguente usa la `FAILED` macro:
 
 ```cpp
 #include <windows.h>
@@ -70,8 +70,8 @@ HRESULT f( )
 }
 ```
 
-Per questo avviso, il tipo di `SCODE` è equivalente a `HRESULT`.
+Per questo avviso, il `SCODE` tipo è equivalente a `HRESULT` .
 
 Per ulteriori informazioni, vedere [macro SUCCEEDED](/windows/win32/api/winerror/nf-winerror-succeeded) e [macro failed](/windows/win32/api/winerror/nf-winerror-failed).
 
-Si noti che l'uso di malloc e della versione gratuita (e delle API di allocazione della memoria dinamica correlate) presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL ( C++ Standard Template Library). Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [ C++ libreria standard](/cpp/standard-library/cpp-standard-library-reference).
+Si noti che l'uso di malloc e della versione gratuita (e delle API di allocazione della memoria dinamica correlate) presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](../standard-library/shared-ptr-class.md), [unique_ptr](../standard-library/unique-ptr-class.md)e [vector](../standard-library/vector.md). Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
