--- a/docs/code-quality/c6235.md
+++ b/docs/code-quality/c6235.md
@@ -7,20 +7,20 @@ f1_keywords:
 helpviewer_keywords:
 - C6235
 ms.assetid: e225955e-0bb5-43a4-a83d-83290e209df4
-ms.openlocfilehash: 26e00cbc86fb303db36fea1cd9e68669a6d004a8
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: cdd2c17533d04edbdb1587f4abb42b5d1b29eca2
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420559"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91499109"
 ---
 # <a name="c6235"></a>C6235
 
-> avviso C6235: (\<costante diversa da zero > &#124; &#124; \<espressione >) è sempre una costante diversa da zero
+> avviso C6235: ( \<non-zero constant> &#124;&#124; \<expression> ) è sempre una costante diversa da zero
 
 Questo avviso indica che è stato rilevato un valore costante diverso da zero, diverso da uno, sul lato sinistro di un'operazione OR logica che si verifica in un contesto di test. Il lato destro dell'operazione OR logica non viene valutato perché l'espressione risultante restituisce sempre true. Questa operazione viene definita "valutazione a corto circuito".
 
-Un valore costante diverso da zero, diverso da uno, suggerisce che l'operatore AND bit per bit (`&`) potrebbe essere stato previsto. Questo avviso non viene generato per l'idioma comune quando la costante diversa da zero è 1, a causa del relativo utilizzo per l'abilitazione selettiva dei percorsi di codice, ma viene generata se la costante diversa da zero restituisce 1, ad esempio 1 + 0.
+Un valore costante diverso da zero, diverso da uno, suggerisce che è possibile che sia stato previsto l'operatore AND bit per bit ( `&` ). Questo avviso non viene generato per l'idioma comune quando la costante diversa da zero è 1, a causa del relativo utilizzo per l'abilitazione selettiva dei percorsi di codice, ma viene generata se la costante diversa da zero restituisce 1, ad esempio 1 + 0.
 
 ## <a name="example"></a>Esempio
 
@@ -41,7 +41,7 @@ void f(int n)
 }
 ```
 
-Il codice seguente usa l'operatore AND bit per bit (`&`) per correggere il problema:
+Il codice seguente usa l'operatore AND bit per bit ( `&` ) per correggere il problema:
 
 ```cpp
 #define INPUT_TYPE 2
@@ -60,4 +60,4 @@ void f(int n)
 
 ## <a name="see-also"></a>Vedere anche
 
-[Operatori logici C](/cpp/c-language/c-logical-operators)
+[Operatori logici C](../c-language/c-logical-operators.md)
