--- a/docs/code-quality/c6242.md
+++ b/docs/code-quality/c6242.md
@@ -8,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C6242
 ms.assetid: 523d46ce-8370-434c-a752-2e3a18cca9a5
-ms.openlocfilehash: a7b2b16689314c06afc47937cabc7c77dfb9f91e
-ms.sourcegitcommit: efc8c32205c9d610f40597556273a64306dec15d
+ms.openlocfilehash: 57bfc8f6ed009238375e3e7e810909e09bd5df8b
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/26/2020
-ms.locfileid: "88898652"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91498985"
 ---
 # <a name="c6242"></a>C6242
 
@@ -83,9 +83,9 @@ int f()
 }
 ```
 
-L'uso di `malloc` e `free` presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare il totale di questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria standard C++. Sono inclusi [`shared_ptr`](/cpp/standard-library/shared-ptr-class) , [`unique_ptr`](/cpp/standard-library/unique-ptr-class) e [`vector`](/cpp/standard-library/vector) . Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [libreria standard C++](/cpp/standard-library/cpp-standard-library-reference).
+L'uso di `malloc` e `free` presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare il totale di questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria standard C++. Sono inclusi [`shared_ptr`](../standard-library/shared-ptr-class.md) , [`unique_ptr`](../standard-library/unique-ptr-class.md) e [`vector`](../standard-library/vector.md) . Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
 
 ## <a name="see-also"></a>Vedere anche
 
-[`try-except` istruzione](/cpp/cpp/try-except-statement)\
-[`try-finally` istruzione](/cpp/cpp/try-finally-statement)
+[`try-except` istruzione](../cpp/try-except-statement.md)\
+[`try-finally` istruzione](../cpp/try-finally-statement.md)
