--- a/docs/code-quality/c6260.md
+++ b/docs/code-quality/c6260.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - C6260
 ms.assetid: 9cbedfcb-32b2-4fe4-99f7-a2d4a7f4422a
-ms.openlocfilehash: 2604dd5dd1210223f2cefaa21c1ac31bf459a646
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+ms.openlocfilehash: 635b4c7628ea306815a45408995875e3fe07f9db
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87223720"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91498878"
 ---
 # <a name="c6260"></a>C6260
 
@@ -60,5 +60,5 @@ void f( )
 
 ## <a name="see-also"></a>Vedere anche
 
-- [Operatore sizeof](/cpp/cpp/sizeof-operator)
-- [Operatore sizeof (C)](/cpp/c-language/sizeof-operator-c)
+- [Operatore sizeof](../cpp/sizeof-operator.md)
+- [Operatore sizeof (C)](../c-language/sizeof-operator-c.md)
