--- a/docs/code-quality/c6262.md
+++ b/docs/code-quality/c6262.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - C6262
 ms.assetid: 3eddc74e-2b05-4159-a093-fd469fdcebbb
-ms.openlocfilehash: 4dca5729aad86fc17e3b4c387a98c38878d3bf1b
-ms.sourcegitcommit: 6e55aeb538b1c39af754f82d6f7738a18f5aa031
+ms.openlocfilehash: 3e26670ed039171bc316f81379df22321eb6828e
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/29/2020
-ms.locfileid: "87389753"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91498858"
 ---
 # <a name="c6262"></a>C6262
 
@@ -69,7 +69,7 @@ void f( )
 }
 ```
 
-L'uso di `malloc` e `free` presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [`shared_ptr`](/cpp/standard-library/shared-ptr-class) , [`unique_ptr`](/cpp/standard-library/unique-ptr-class) e [`vector`](/cpp/standard-library/vector) . Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [libreria standard C++](/cpp/standard-library/cpp-standard-library-reference).
+L'uso di `malloc` e `free` presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [`shared_ptr`](../standard-library/shared-ptr-class.md) , [`unique_ptr`](../standard-library/unique-ptr-class.md) e [`vector`](../standard-library/vector.md) . Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
 
 ### <a name="to-correct-this-warning-by-adjusting-the-stack-size"></a>Per correggere questo avviso regolando le dimensioni dello stack
 
@@ -81,6 +81,6 @@ L'uso di `malloc` e `free` presenta molti problemi in termini di perdite di memo
 
 ## <a name="see-also"></a>Vedere anche
 
-- [`/STACK`(Allocazioni stack)](/cpp/build/reference/stack-stack-allocations)
-- [`_resetstkoflw`](/cpp/c-runtime-library/reference/resetstkoflw)
+- [`/STACK` (Allocazioni stack)](../build/reference/stack-stack-allocations.md)
+- [`_resetstkoflw`](../c-runtime-library/reference/resetstkoflw.md)
 - [Procedura: utilizzare i controlli runtime nativi](/visualstudio/debugger/how-to-use-native-run-time-checks)
