--- a/docs/code-quality/c6263.md
+++ b/docs/code-quality/c6263.md
@@ -7,20 +7,20 @@ f1_keywords:
 helpviewer_keywords:
 - C6263
 ms.assetid: bc360ad7-5f59-4480-a642-6c7e6beeb5f6
-ms.openlocfilehash: eef2b97ad9befe5ab7930c24ae0622dc1633f16c
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 8002a7da096c104f8c232b3b2f1d7ab55313a594
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420363"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91498889"
 ---
 # <a name="c6263"></a>C6263
 
 > avviso C6263: utilizzo di _alloca in un ciclo; Questo può creare rapidamente un overflow dello stack
 
-Questo avviso indica che la chiamata di _alloca all'interno di un ciclo per allocare memoria può causare un overflow dello stack. _alloca alloca memoria dallo stack, ma tale memoria viene liberata solo quando la funzione chiamante viene chiusa. Lo stack, anche in modalità utente, è limitato e l'impossibilità di eseguire il commit di una pagina di stack causa un'eccezione di overflow dello stack. La funzione `_resetstkoflw` esegue il ripristino da una condizione di overflow dello stack, consentendo di continuare l'esecuzione di un programma anziché interromperlo con un errore di eccezione irreversibile. Se la funzione `_resetstkoflw` non viene chiamata, non è presente alcuna pagina di protezione dopo l'eccezione precedente. La volta successiva che si verifica un overflow dello stack, non verrà generata alcuna eccezione e il processo viene terminato senza avvisi.
+Questo avviso indica che la chiamata di _alloca all'interno di un ciclo per allocare memoria può causare un overflow dello stack. _alloca alloca memoria dallo stack, ma tale memoria viene liberata solo quando la funzione chiamante viene chiusa. Lo stack, anche in modalità utente, è limitato e l'impossibilità di eseguire il commit di una pagina di stack causa un'eccezione di overflow dello stack. La funzione `_resetstkoflw` esegue il ripristino da una condizione di overflow dello stack, consentendo di continuare l'esecuzione di un programma anziché interromperlo con un errore di eccezione irreversibile. Se la `_resetstkoflw` funzione non viene chiamata, dopo l'eccezione precedente non è presente alcuna pagina di protezione. La volta successiva che si verifica un overflow dello stack, non verrà generata alcuna eccezione e il processo viene terminato senza avvisi.
 
-È consigliabile evitare di chiamare `_alloca` all'interno di un ciclo se la dimensione di allocazione o il conteggio delle iterazioni è sconosciuta perché potrebbe causare un overflow dello stack. In questi casi, prendere in considerazione altre opzioni, ad esempio, memoria heap o [ C++ classi libreria standard](/cpp/standard-library/cpp-standard-library-reference) .
+È consigliabile evitare `_alloca` di chiamare all'interno di un ciclo se la dimensione di allocazione o il conteggio delle iterazioni è sconosciuta perché potrebbe causare un overflow dello stack. In questi casi, prendere in considerazione altre opzioni, ad esempio, la memoria heap o le classi della [libreria standard C++](../standard-library/cpp-standard-library-reference.md) .
 
 ## <a name="example"></a>Esempio
 
@@ -80,7 +80,7 @@ void f ( int size )
 
 ## <a name="see-also"></a>Vedere anche
 
-- [malloc](/cpp/c-runtime-library/reference/malloc)
-- [_alloca](/cpp/c-runtime-library/reference/alloca)
-- [_malloca](/cpp/c-runtime-library/reference/malloca)
-- [Libreria standard C++](/cpp/standard-library/cpp-standard-library-reference)
+- [malloc](../c-runtime-library/reference/malloc.md)
+- [_alloca](../c-runtime-library/reference/alloca.md)
+- [_malloca](../c-runtime-library/reference/malloca.md)
+- [Libreria standard C++](../standard-library/cpp-standard-library-reference.md)
