--- a/docs/code-quality/c6281.md
+++ b/docs/code-quality/c6281.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - C6281
 ms.assetid: d0182269-8403-486b-ac3f-325522871bb1
-ms.openlocfilehash: e2402ee45f816197d5a58de7c4b65d2c958c0690
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: ebbd4af7a8ff20777bb5b3e985c7568079cd703d
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420181"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91499934"
 ---
 # <a name="c6281"></a>C6281
 
 > avviso C6281: ordine errato delle operazioni: gli operatori relazionali hanno precedenza maggiore rispetto agli operatori bit per bit
 
-Questo avviso indica un possibile errore nella precedenza degli operatori. Questo potrebbe produrre risultati non corretti. È necessario controllare la precedenza e utilizzare le parentesi per chiarire lo scopo. Gli operatori relazionali (\<, >, \<=, > =, = =,! =) hanno una precedenza maggiore rispetto agli operatori &#124; bit per bit (& ^).
+Questo avviso indica un possibile errore nella precedenza degli operatori. Questo potrebbe produrre risultati non corretti. È necessario controllare la precedenza e utilizzare le parentesi per chiarire lo scopo. Gli operatori relazionali ( \<, > , \<=, > =, = =,! =) hanno una precedenza maggiore rispetto agli operatori bit per bit (& &#124; ^).
 
 ## <a name="example"></a>Esempio
 
@@ -56,4 +56,4 @@ void f(int input)
 
 ## <a name="see-also"></a>Vedere anche
 
-[Avviso del compilatore (livello 3) C4554](/cpp/error-messages/compiler-warnings/compiler-warning-level-3-c4554)
+[Avviso del compilatore (livello 3) C4554](../error-messages/compiler-warnings/compiler-warning-level-3-c4554.md)
