--- a/docs/code-quality/c6282.md
+++ b/docs/code-quality/c6282.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - C6282
 ms.assetid: 7dc153d5-fb9f-424a-8afa-4e2661efa51c
-ms.openlocfilehash: 64c23ed211d2bedc252f578b2cf536773e8d0d2f
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: a4c65f43f3de8e2d20777e1c0a851312ef81e442
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420118"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91499920"
 ---
 # <a name="c6282"></a>C6282
 
 > avviso C6282: operatore errato: assegnazione di costante in un contesto booleano. Provare a usare ' = ='
 
-Questo avviso indica che è stata rilevata un'assegnazione di una costante a una variabile in un contesto di test. L'assegnazione di una costante a una variabile in un contesto di test è quasi sempre errata. Sostituire il `=` con `==`oppure rimuovere l'assegnazione dal contesto di test per risolvere il problema.
+Questo avviso indica che è stata rilevata un'assegnazione di una costante a una variabile in un contesto di test. L'assegnazione di una costante a una variabile in un contesto di test è quasi sempre errata. Sostituire `=` con `==` oppure rimuovere l'assegnazione dal contesto di test per risolvere questo avviso.
 
 ## <a name="example"></a>Esempio
 
@@ -48,4 +48,4 @@ void f( int i )
 
 ## <a name="see-also"></a>Vedere anche
 
-[Avviso del compilatore (livello 4) C4706](/cpp/error-messages/compiler-warnings/compiler-warning-level-4-c4706)
+[Avviso del compilatore (livello 4) C4706](../error-messages/compiler-warnings/compiler-warning-level-4-c4706.md)
