--- a/docs/code-quality/c6283.md
+++ b/docs/code-quality/c6283.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - C6283
 ms.assetid: 7760d32e-6d71-4c81-a6d2-719c9c76c2bb
-ms.openlocfilehash: 3c4e6c3fe3a3d98e7914b516534bf5c05630e740
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+ms.openlocfilehash: 6e610e77980d1ba841c4dbdce6bbf76ee22d8832
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87233821"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91499907"
 ---
 # <a name="c6283"></a>C6283
 
@@ -46,4 +46,4 @@ void f( )
 
 Avviso C6283 si applica solo a matrici di tipi primitivi, ad esempio numeri interi o caratteri. Se gli elementi della matrice sono oggetti di tipo classe, viene generato un avviso [C6278](../code-quality/c6278.md) .
 
-L'uso di New e Delete presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [libreria standard C++](/cpp/standard-library/cpp-standard-library-reference).
+L'uso di New e Delete presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](../standard-library/shared-ptr-class.md), [unique_ptr](../standard-library/unique-ptr-class.md)e [vector](../standard-library/vector.md). Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
